force-app/main/default/objects/TacheTemplate__c/TacheTemplate__c.object-meta.xml
<CustomObject>
    <label>Template de tâche</label>
    <nameField>
        <displayFormat>TEM-{0000}</displayFormat>
        <label>Template de tâche</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templates de tâches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>