force-app/main/default/objects/TacheTemplate__c/fields/Action_supplementaire__c.field-meta.xml
<CustomField>
    <fullName>Action_supplementaire__c</fullName>
    <label>Action supplémentaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activer_campagne</fullName>
                <label>Activer campagne</label>
            </value>
            <value>
                <fullName>Push_CSM</fullName>
                <label>Envoyer une notif Push au CSM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>