force-app/main/default/objects/TacheTemplate__c/fields/Assigne__c.field-meta.xml
<CustomField>
    <fullName>Assigne__c</fullName>
    <label>Tâche assignée à</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSM en charge</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
                <label>Propriétaire de l&apos;enregistrement</label>
            </value>
            <value>
                <fullName>Equipe Mesure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>