force-app/main/default/objects/TacheTemplate__c/fields/Commentaires__c.field-meta.xml
<CustomField>
    <fullName>Commentaires__c</fullName>
    <label>Commentaires</label>
    <length>255</length>
    <type>Text</type>
</CustomField>