force-app/main/default/objects/TacheTemplate__c/fields/Declenche_Tache__c.field-meta.xml
<CustomField>
    <fullName>Declenche_Tache__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Déclenche tâche à la clôture</label>
    <referenceTo>TacheTemplate__c</referenceTo>
    <relationshipLabel>Templates de tâches dépendantes</relationshipLabel>
    <relationshipName>Tache_declencheuse</relationshipName>
    <type>Lookup</type>
</CustomField>