force-app/main/default/objects/TacheTemplate__c/fields/Declencheur__c.field-meta.xml
<CustomField>
    <fullName>Declencheur__c</fullName>
    <label>Déclencheur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creation_Requete</fullName>
                <label>Création d&apos;une requête</label>
            </value>
            <value>
                <fullName>Assignation_CSM</fullName>
                <label>Assignation d&apos;un CSM sur l&apos;opportunité</label>
            </value>
            <value>
                <fullName>Fin_campagne</fullName>
                <label>Fin de la campagne</label>
            </value>
            <value>
                <fullName>Fin_Tache</fullName>
                <label>Fin d&apos;une autre tâche</label>
            </value>
            <value>
                <fullName>Debut_Campagne</fullName>
                <label>Début de la campagne</label>
            </value>
            <value>
                <fullName>Creation_Opportunite</fullName>
                <label>Création d&apos;une opportunité</label>
            </value>
            <value>
                <fullName>Passage_Signe</fullName>
                <label>Passage à &quot;Signé&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>