force-app/main/default/objects/TacheTemplate__c/fields/Declencheur_Avant_Apres__c.field-meta.xml
<CustomField>
    <fullName>Declencheur_Avant_Apres__c</fullName>
    <label>Déclencheur - Avant Après</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avant</fullName>
            </value>
            <value>
                <fullName>Apres</fullName>
                <label>Après</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>