force-app/main/default/objects/TacheTemplate__c/fields/Declencheur_Nb_jours__c.field-meta.xml
<CustomField>
    <fullName>Declencheur_Nb_jours__c</fullName>
    <label>Déclencheur -Nb de jours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>