force-app/main/default/objects/TacheTemplate__c/fields/Evenement__c.field-meta.xml
<CustomField>
    <fullName>Evenement__c</fullName>
    <label>Evénement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunite_Date_Debut_Campagne</fullName>
                <label>Opportunité - Date de début théorique campagne</label>
            </value>
            <value>
                <fullName>Opportunite_Date_Fin_Campagne</fullName>
                <label>Opportunité - Date de fin théorique campagne</label>
            </value>
            <value>
                <fullName>Requete_Date_Debut_Campagne</fullName>
                <label>Requête - Date de début réel campagne</label>
            </value>
            <value>
                <fullName>Requete_Date_Fin_Campagne</fullName>
                <label>Requête - Date de fin réelle campagne</label>
            </value>
            <value>
                <fullName>Creation_opportunite</fullName>
                <label>Création de l&apos;opportunité</label>
            </value>
            <value>
                <fullName>OpportunityStartDate</fullName>
                <isActive>false</isActive>
                <label>Opportunité - Date de début réel</label>
            </value>
            <value>
                <fullName>OpportunityEndDate</fullName>
                <isActive>false</isActive>
                <label>Opportunité - Date de fin réelle</label>
            </value>
            <value>
                <fullName>Requête - Date de début théorique</fullName>
                <isActive>false</isActive>
                <label>Requête - Date de début théorique</label>
            </value>
            <value>
                <fullName>Requête - Date de fin théorique</fullName>
                <isActive>false</isActive>
                <label>Requête - Date de fin théorique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>