force-app/main/default/objects/TacheTemplate__c/fields/Frais_Graphiques_inclus__c.field-meta.xml
<CustomField>
    <fullName>Frais_Graphiques_inclus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cochez cette case si la tâche doit être créée uniquement si l&apos;opportunité a un Produit Frais Graphique associé.</description>
    <inlineHelpText>Cochez cette case si la tâche doit être créée uniquement si l&apos;opportunité a un Produit Frais Graphique associé.</inlineHelpText>
    <label>Frais Graphiques inclus</label>
    <type>Checkbox</type>
</CustomField>