force-app/main/default/objects/TacheTemplate__c/fields/Mesure_incluse__c.field-meta.xml
<CustomField>
    <fullName>Mesure_incluse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mesure incluse</label>
    <type>Checkbox</type>
</CustomField>