force-app/main/default/objects/TacheTemplate__c/fields/Nombre_Jours__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Jours__c</fullName>
    <label>Nombre de jours avant/après</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>