force-app/main/default/objects/TacheTemplate__c/fields/Objet__c.field-meta.xml
<CustomField>
    <fullName>Objet__c</fullName>
    <formula>TEXT(Plan_action__r.Objet__c)</formula>
    <label>Opportunité/Requête</label>
    <type>Text</type>
</CustomField>