force-app/main/default/objects/TacheTemplate__c/fields/Opportunite_Promogaming__c.field-meta.xml
<CustomField>
    <fullName>Opportunite_Promogaming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunité Promogaming uniquement</label>
    <type>Checkbox</type>
</CustomField>