force-app/main/default/objects/TacheTemplate__c/fields/Plan_action__c.field-meta.xml
<CustomField>
    <fullName>Plan_action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan d&apos;action</label>
    <referenceTo>Plan_d_action__c</referenceTo>
    <relationshipLabel>Templates de tâches</relationshipLabel>
    <relationshipName>Templates_taches</relationshipName>
    <type>Lookup</type>
</CustomField>