force-app/main/default/objects/TacheTemplate__c/fields/Priorite__c.field-meta.xml
<CustomField>
    <fullName>Priorite__c</fullName>
    <label>Priorité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>High</fullName>
                <label>Haute</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>