force-app/main/default/objects/TacheTemplate__c/fields/Promogaming_Monomarque_Multimarque__c.field-meta.xml
<CustomField>
    <fullName>Promogaming_Monomarque_Multimarque__c</fullName>
    <label>Promogaming Monomarque/Multimarque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monomarque</fullName>
            </value>
            <value>
                <fullName>Multimarques</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>