force-app/main/default/objects/TacheTemplate__c/fields/Titre_tache__c.field-meta.xml
<CustomField>
    <fullName>Titre_tache__c</fullName>
    <label>Titre de la tâche</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>