force-app/main/default/objects/TacheTemplate__c/fields/Type_enregistrement__c.field-meta.xml
<CustomField>
    <fullName>Type_enregistrement__c</fullName>
    <formula>TEXT( Plan_action__r.Type_Enregistrement__c)</formula>
    <label>Type d&apos;enregistrement</label>
    <type>Text</type>
</CustomField>