force-app/main/default/objects/TacheTemplate__c/recordTypes/Template_tache_Opportunit.recordType-meta.xml
<RecordType>
    <fullName>Template_tache_Opportunit</fullName>
    <active>true</active>
    <label>Template de tâche Opportunité</label>
</RecordType>