force-app/main/default/objects/TacheTemplate__c/recordTypes/Template_tache_Requete.recordType-meta.xml
<RecordType>
    <fullName>Template_tache_Requete</fullName>
    <active>true</active>
    <label>Template de tâche Requête</label>
</RecordType>