force-app/main/default/objects/TacheTemplate__c/listViews/Templates_de_tache_Opportunite.listView-meta.xml
<ListView>
    <fullName>Templates_de_tache_Opportunite</fullName>
    <columns>Plan_action__c</columns>
    <columns>NAME</columns>
    <columns>Avant_Apres__c</columns>
    <columns>Declencheur__c</columns>
    <columns>Evenement__c</columns>
    <columns>Assigne__c</columns>
    <columns>Titre_tache__c</columns>
    <columns>Nombre_Jours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Objet__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>Templates de tâche - Opportunité</label>
</ListView>